--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
           <a href="/android-tutorial.html"><h4 class="text-white">安卓 V2rayNG 客户端配置3步教程</h4></a>
         </li>
         <li class="bg-secondary p-2 rounded text-white mt-3">
+          <a href="/android-tutorial-2.html"><h4 class="text-white">安卓 Kitsunebi 客户端配置3步教程</h4></a>
+        </li>
+        <li class="bg-secondary p-2 rounded text-white mt-3">
           <a href="/chrome-tutorial.html"><h4 class="text-white">Chrome 科学上网配置3步教程</h4></a>
         </li>
       </ul>
